2009-02-24  Matthias Clasen <mclasen@redhat.com>

	* gdk/x11/gdkevents-x11.c:
	* gdk/x11/gdkscreen-x11.[hc]: Another attempt at getting Xrandr
	screen size changes right. Actually handle XRRScreenChangeNotify
	events, and ignore root ConfigureNotify events if we are using
	Xrandr. Only emit size-changed signals if the screen size changed,
	and only emit monitor-changed signals if the monitors changed.

2009-02-23  Matthias Clasen <mclasen@redhat.com>

	Bug 565199 – Ellipsize text in Places list

	* gtk/gtkfilechooserdefault.c (shortcuts_list_create): Never scroll
	the places horizontally. Instead, ellipsize the text.

2009-02-19  Michael Hasselmann <michaelh@openismus.com>

	* gtk/gtkcombobox.c (gtk_combo_box_set_active_internal):
	Added a check to not emit a "changed" signal when an already invalid
	selection was set to invalid.

2009-02-22  Matthias Clasen <mclasen@redhat.com>

	* gtk/gtk.symbols:
	* gtk/gtkactivatable.[hc]: Rename gtk_activatable_reset to
	gtk_activatable_sync_action_properties, since the previous name
	was deemed too generic. Update all implementations.

2009-02-19  Ray Strode  <rstrode@redhat.com>

	* gdk/x11/gdkscreen-x11.c
	(monitor_compare_function), (init_randr13):
	After using randr to get a list of monitors,
	sort the list such that the biggest output
	of "cloned" outputs comes first in the list.
	This helps apps that don't generally handle
	overlapping outputs to work better in randr
	clone mode.

2009-02-19  Sven Neumann  <sven@gimp.org>

	* gdk/directfb/gdkwindow-directfb.c
	(gdk_directfb_window_move_resize): looks like being called with
	negative width and height should be interpreted as a move. Fixes
	scrolling and makes popups work to some extent.

	(_gdk_directfb_move_resize_child): formatting.

2009-02-19  Sven Neumann  <sven@gimp.org>

	* gdk/directfb/gdkdisplay-directfb.c (gdk_display_open): move the
	call to _gdk_windowing_window_init() up a little. Fixes a crash